examples/semantics/errors/error20.grace
fun error20 () : nothing
	fun foo(ref arr:int): nothing
	{
		puti(8);
	}
{
	foo(10);
}
